A button to randomize the operator, that can be repressed to give a new character

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <h1>Arknights Squad Randomizer</h1>
             <h4 id='credits'>Credits for the API that I used go to Sarah Ting, who put together an API of Arknights Operators for one of her projects, many thanks!</h4>
 
-            <button id="randomizeTest">Randomize</button>
+            <button id="randomizeTest">Choose a Random Operator!</button>
 
             <div class="data" id="opData">
                 <h2>Operator Selected</h2>
