A button to add a character to a squad list

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
             <button id="randomizeTest">Choose a Random Operator!</button>
 
             <div class="data" id="opData">
-                <h2>Operator Selected</h2>
+                <h2>Operator Details</h2>
+                
 
                 <h3>   Codename: </h3> <p id="name">___</p>
 
@@ -28,10 +29,40 @@
                 <h3>   Faction: </h3> <img id="factionIcon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Question_mark_%28black%29.svg/200px-Question_mark_%28black%29.svg.png"> <p id="faction">___</p>
                 
                 <h3>   Rarity: </h3> <p id="rarity">___</p>
+
+                <button id="squadAdder">Add to Squad</button>
             </div>
 
             <img class="data" id="artwork" src=" ">
 
+
+            <ul id="squad" class="list"> 
+                <h3>Current Squad</h3>
+                <li id="squad-0"></li>
+                <img id="class-0" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <li id="squad-1"></li>
+                <img id="class-1" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <li id="squad-2"></li>
+                <img id="class-2" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <li id="squad-3"></li>
+                <img id="class-3" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <li id="squad-4"></li>
+                <img id="class-4" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <li id="squad-5"></li>
+                <img id="class-5" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <li id="squad-6"></li>
+                <img id="class-6" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <li id="squad-7"></li>
+                <img id="class-7" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <li id="squad-8"></li>
+                <img id="class-8" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <li id="squad-9"></li>
+                <img id="class-9" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <li id="squad-10"></li>
+                <img id="class-10" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <li id="squad-11"></li>
+                <img id="class-11" src="https://convertingcolors.com/plain-BBB8B8.svg">
+            </ul>
 
 
 
