--- a/index.html
+++ b/index.html
@@ -38,28 +38,40 @@
 
             <ul id="squad" class="list"> 
                 <h3>Current Squad</h3>
+                <button id="remove-0"></button>
                 <li id="squad-0"></li>
                 <img id="class-0" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <button id="remove-1"></button>
                 <li id="squad-1"></li>
                 <img id="class-1" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <button id="remove-2"></button>
                 <li id="squad-2"></li>
                 <img id="class-2" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <button id="remove-3"></button>
                 <li id="squad-3"></li>
                 <img id="class-3" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <button id="remove-4"></button>
                 <li id="squad-4"></li>
                 <img id="class-4" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <button id="remove-5"></button>
                 <li id="squad-5"></li>
                 <img id="class-5" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <button id="remove-6"></button>
                 <li id="squad-6"></li>
                 <img id="class-6" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <button id="remove-7"></button>
                 <li id="squad-7"></li>
                 <img id="class-7" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <button id="remove-8"></button>
                 <li id="squad-8"></li>
                 <img id="class-8" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <button id="remove-9"></button>
                 <li id="squad-9"></li>
                 <img id="class-9" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <button id="remove-10"></button>
                 <li id="squad-10"></li>
                 <img id="class-10" src="https://convertingcolors.com/plain-BBB8B8.svg">
+                <button id="remove-11"></button>
                 <li id="squad-11"></li>
                 <img id="class-11" src="https://convertingcolors.com/plain-BBB8B8.svg">
             </ul>
