utilized event delegation to make the remove button work

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <button id="randomizeTest">Choose a Random Operator!</button>
 
             <div class="data" id="opData">
+                <button id="squadAdder">Add to Squad</button>
                 <h2>Operator Details</h2>
                 
 
@@ -29,8 +30,6 @@
                 <h3>   Faction: </h3> <img id="factionIcon" src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/46/Question_mark_%28black%29.svg/200px-Question_mark_%28black%29.svg.png"> <p id="faction">___</p>
                 
                 <h3>   Rarity: </h3> <p id="rarity">___</p>
-
-                <button id="squadAdder">Add to Squad</button>
             </div>
 
             <img class="data" id="artwork" src=" ">
@@ -38,40 +37,40 @@
 
             <ul id="squad" class="list"> 
                 <h3>Current Squad</h3>
-                <button id="remove-0"></button>
+                <button id="remove-0" class="remover"></button>
                 <li id="squad-0"></li>
                 <img id="class-0" src="https://convertingcolors.com/plain-BBB8B8.svg">
-                <button id="remove-1"></button>
+                <button id="remove-1" class="remover"></button>
                 <li id="squad-1"></li>
                 <img id="class-1" src="https://convertingcolors.com/plain-BBB8B8.svg">
-                <button id="remove-2"></button>
+                <button id="remove-2" class="remover"></button>
                 <li id="squad-2"></li>
                 <img id="class-2" src="https://convertingcolors.com/plain-BBB8B8.svg">
-                <button id="remove-3"></button>
+                <button id="remove-3" class="remover"></button>
                 <li id="squad-3"></li>
                 <img id="class-3" src="https://convertingcolors.com/plain-BBB8B8.svg">
-                <button id="remove-4"></button>
+                <button id="remove-4" class="remover"></button>
                 <li id="squad-4"></li>
                 <img id="class-4" src="https://convertingcolors.com/plain-BBB8B8.svg">
-                <button id="remove-5"></button>
+                <button id="remove-5" class="remover"></button>
                 <li id="squad-5"></li>
                 <img id="class-5" src="https://convertingcolors.com/plain-BBB8B8.svg">
-                <button id="remove-6"></button>
+                <button id="remove-6" class="remover"></button>
                 <li id="squad-6"></li>
                 <img id="class-6" src="https://convertingcolors.com/plain-BBB8B8.svg">
-                <button id="remove-7"></button>
+                <button id="remove-7" class="remover"></button>
                 <li id="squad-7"></li>
                 <img id="class-7" src="https://convertingcolors.com/plain-BBB8B8.svg">
-                <button id="remove-8"></button>
+                <button id="remove-8" class="remover"></button>
                 <li id="squad-8"></li>
                 <img id="class-8" src="https://convertingcolors.com/plain-BBB8B8.svg">
-                <button id="remove-9"></button>
+                <button id="remove-9" class="remover"></button>
                 <li id="squad-9"></li>
                 <img id="class-9" src="https://convertingcolors.com/plain-BBB8B8.svg">
-                <button id="remove-10"></button>
+                <button id="remove-10" class="remover"></button>
                 <li id="squad-10"></li>
                 <img id="class-10" src="https://convertingcolors.com/plain-BBB8B8.svg">
-                <button id="remove-11"></button>
+                <button id="remove-11" class="remover"></button>
                 <li id="squad-11"></li>
                 <img id="class-11" src="https://convertingcolors.com/plain-BBB8B8.svg">
             </ul>
